--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body class="flex flex-col font-sans selection:bg-cyan-500/30">
 
-    <!-- CABECERA COMPACTA -->
+    <!-- CABECERA -->
     <header class="w-full py-4 px-4 z-20 flex flex-col items-center justify-center border-b border-white/5 bg-black/40 backdrop-blur-md sticky top-0">
         <h1 class="font-krono text-3xl md:text-4xl font-black text-center text-white animate-flicker tracking-widest">
             KRONO V1.0
@@ -103,21 +103,21 @@
     </header>
 
     <!-- CONTENEDOR PRINCIPAL -->
-    <main class="flex-grow w-full max-w-[1920px] mx-auto p-4 md:p-6 flex flex-col gap-8">
+    <main class="flex-grow w-full max-w-[1920px] mx-auto p-4 md:p-6 flex flex-col gap-12">
         
         <!-- NIVEL SUPERIOR: IMG - VIDEO - IMG -->
-        <!-- Altura ajustada dinámicamente: en móvil es auto, en escritorio es 65% de la altura de pantalla -->
-        <div class="flex flex-col md:flex-row gap-6 md:gap-10 justify-center items-center md:items-end h-auto md:h-[65vh]">
+        <!-- Flex items-center asegura que todo esté centrado verticalmente -->
+        <div class="flex flex-col md:flex-row gap-8 md:gap-16 justify-center items-center">
             
-            <!-- IZQUIERDA: Captura 1 (Ligeramente más pequeña que el video para dar jerarquía) -->
-            <!-- h-[85%] en escritorio asegura que no sea tan "alargada" visualmente como el video -->
-            <div class="glass-panel rounded-2xl aspect-[9/16] h-[40vh] md:h-[85%] w-auto group order-2 md:order-1 shadow-lg" onclick="openLightbox('img1')">
+            <!-- IZQUIERDA: Captura 1 -->
+            <!-- Altura fija controlada (50vh) y aspect ratio forzado 9/16 -->
+            <div class="glass-panel rounded-2xl aspect-[9/16] h-[40vh] md:h-[50vh] w-auto order-2 md:order-1 shadow-lg" onclick="openLightbox('img1')">
                 <img id="img1" src="captura1.jpg" class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity" onerror="this.src='https://placehold.co/1080x1920/000/0ff?text=IMG+01'">
                 <div class="absolute bottom-0 w-full bg-black/70 p-2 text-center text-[10px] text-neon opacity-0 group-hover:opacity-100 transition-opacity font-krono tracking-widest">ZOOM</div>
             </div>
 
-            <!-- CENTRO: Video (El Héroe, ocupa el 100% de la altura del contenedor) -->
-            <div class="relative h-[60vh] md:h-full aspect-[9/16] order-1 md:order-2 animate-float z-10 mx-4">
+            <!-- CENTRO: Video (Más grande, 65vh) -->
+            <div class="relative h-[60vh] md:h-[65vh] aspect-[9/16] order-1 md:order-2 animate-float z-10">
                 <!-- Teléfono -->
                 <div class="w-full h-full bg-black rounded-[2.5rem] overflow-hidden phone-mockup relative border-2 border-slate-800">
                     <video id="mainVideo" class="w-full h-full object-cover" loop playsinline muted>
@@ -148,8 +148,9 @@
                 </div>
             </div>
 
-            <!-- DERECHA: Captura 2 (Igual que la izquierda) -->
-            <div class="glass-panel rounded-2xl aspect-[9/16] h-[40vh] md:h-[85%] w-auto group order-3 md:order-3 shadow-lg" onclick="openLightbox('img2')">
+            <!-- DERECHA: Captura 2 -->
+            <!-- Altura fija controlada (50vh) y aspect ratio forzado 9/16 -->
+            <div class="glass-panel rounded-2xl aspect-[9/16] h-[40vh] md:h-[50vh] w-auto order-3 md:order-3 shadow-lg" onclick="openLightbox('img2')">
                 <img id="img2" src="captura2.jpg" class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity" onerror="this.src='https://placehold.co/1080x1920/000/0ff?text=IMG+02'">
                 <div class="absolute bottom-0 w-full bg-black/70 p-2 text-center text-[10px] text-neon opacity-0 group-hover:opacity-100 transition-opacity font-krono tracking-widest">ZOOM</div>
             </div>
@@ -157,7 +158,7 @@
         </div>
 
         <!-- NIVEL INFERIOR: GALERÍA (Resto de fotos) -->
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6 w-full max-w-[1200px] mx-auto pt-4">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-8 w-full max-w-[1400px] mx-auto">
             <!-- Foto 3 -->
             <div class="glass-panel rounded-xl aspect-[9/16] group transform hover:-translate-y-2 transition-transform duration-300" onclick="openLightbox('img3')">
                 <img id="img3" src="captura3.jpg" class="w-full h-full object-cover opacity-70 group-hover:opacity-100 transition-opacity" onerror="this.src='https://placehold.co/1080x1920/000/0ff?text=IMG+03'">
@@ -183,7 +184,6 @@
         <button class="absolute top-4 right-4 text-white p-2 hover:bg-white/10 rounded-full transition">
             <i data-lucide="x" class="w-8 h-8"></i>
         </button>
-        <!-- Imagen en Lightbox: Object Contain para verla entera sin recortes -->
         <img id="lightbox-img" src="" class="max-h-[90vh] max-w-[90vw] h-auto w-auto rounded-lg shadow-[0_0_60px_rgba(0,243,255,0.2)] border border-neon/30 object-contain" onclick="event.stopPropagation()">
     </div>
 
